--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_SERVICE_ID="service_bfei82o"
-VITE_TEMPLATE_ID="template_x8am8mp"
-VITE_EMAILJS_KEY="VdUPtVASOpqlqEMAw"
+VITE_SERVICE_ID="service_74eygkb"
+VITE_TEMPLATE_ID="template_4qvyqpf"
+VITE_EMAILJS_KEY="Drd2CiIZOVpfRuwFn"
