--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
+    "react-icons": "^5.0.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
   },
